# job-market-data-pipeline

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: handlers.py
src/main/: main_glints.py  main_jobstreet.py  main_kalibrr.py
src/scraper/: jobscraper_glints.py  jobscraper_jobstreet.py  jobscraper_kalibrr.py
src/utils/: data_validator.py  keywords.py  scraper_utils.py  upload_to_s3.py
terraform/: main.tf  provider.tf  variables.tf
