[project]
name = "job-market-data-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.42.49,<2.0.0)",
    "pandera (>=0.29.0,<0.30.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "tenacity (>=9.0.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy-boto3-s3 (>=1.42.37,<2.0.0)"
]
